--- a/tasks-demo/tasks-demo.css
+++ b/tasks-demo/tasks-demo.css
@@ -11,7 +11,8 @@ input, textarea {
   }
 }
 
-h4 {margin-top: 0;}
+h1 { margin: 8px 0; }
+h4 { margin-top: 0; }
 
 textarea {
   display: block;
@@ -35,11 +36,15 @@ ul > li > a {
   text-decoration: none;
   display: block;
   padding: 12px 16px;
-  border: 1px #e0e0e0 solid;
+  border: 1px #cccbcb solid;
   border-radius: 4px;
   background: linear-gradient(#f8f8f8, #f0f0f0);
   margin-bottom: 2px;
   color: inherit;
+
+  strong {
+    color: #444;
+  }
 
   em {
     margin-left: 1em;
