--- a/tasks-demo/tasks-demo.css
+++ b/tasks-demo/tasks-demo.css
@@ -1,5 +1,7 @@
 html, body {
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 input, textarea {
@@ -11,7 +13,47 @@ input, textarea {
   }
 }
 
-h1 { margin: 8px 0; }
+body > header {
+  background: #2A7B9B;
+  background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+  padding: 8px 16px;
+
+  display: flex;
+  align-items: center;
+
+  aside {
+    margin-left: auto;
+
+    button {
+      padding: 10px;
+      border-radius: 50%;
+      border: none;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      cursor: pointer;
+      
+
+      &:hover {
+        background-color: ivory;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      }
+    }
+  }
+}
+
+#pageFooter {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 0.7em;
+  opacity: 0.7;
+  padding: 4px;
+}
+
+body > ul {
+  padding: 8px;
+}
+
+h1 { margin: 8px 0; color: #fff }
 h4 { margin-top: 0; }
 
 textarea {
@@ -30,6 +72,7 @@ dialog {
 ul, li {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 ul > li > a {
@@ -41,6 +84,10 @@ ul > li > a {
   background: linear-gradient(#f8f8f8, #f0f0f0);
   margin-bottom: 2px;
   color: inherit;
+
+  &:hover {
+    box-shadow: inset 0 0 9px rgba(0, 0, 0, 0.133);
+  }
 
   strong {
     color: #444;
@@ -57,4 +104,10 @@ ul > li > a {
     opacity: 0.5;
     font-size: 0.6em;
   }
+}
+
+.placeholder {
+  display: inline-block;
+  color: #adadad;
+  padding: 16px;
 }
